--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
 </div>
 <div id="columns">
   <div id="side">
-    <div id="cart">
+    <div id="cart" <% if @cart.line_items.empty? %>
+         style="display: none"
+         <% end %>
+         >
       <%= render @cart %>
     </div>
     <ul>
