--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,15 @@
 </div>
 <div id="columns">
   <div id="side">
-    <div id="cart" <% if @cart.line_items.empty? %>
-         style="display: none"
-         <% end %>
-         >
-      <%= render @cart %>
-    </div>
+    <% if @cart %>
+        <%= hidden_div_if @cart.line_items.empty?, id: 'cart' do %>
+            <%= render @cart %>
+        <% end %>
+        <!--<div id="cart">
+        <%= render @cart %>
+    </div>-->
+    <% end %>
+
     <ul>
       <li><a href="http://www....">Home</a></li>
       <li><a href="http://www..../faq">Questions</a></li>
